--- a/2015-5-18/dHtml.html
+++ b/2015-5-18/dHtml.html
@@ -23,6 +23,9 @@
 			.step{
 				background: rgba(234,234,234,0.4);
 			}
+			/*.selector_bg{
+				background: url(../lib/images/priority_rules_1.jpg) no-repeat 50% 50%;
+			}*/
 
 			/*@-webkit-keyframes shadow{
 				from{
@@ -40,38 +43,39 @@
 				<h1>该浏览器不支持!!!</h1>
 			</div>
 			<div class="step" data-x="0" data-y="0" data-z="1000">
-				<h1>关于事件</h1>
-				<h3>事件冒泡与捕捉</h3>
-				<h3>事件代理</h3>
-				<h3>submit事件模拟</h3>
-				<h3>mouseleave和mouseenter事件模拟</h3>
+				<h1>客户端储存</h1>
+				<h3>cookie(安全性)</h3>
+				<h3>Storage(关联化持久数组): localSotrage和sessionStorage </h3>
+				<h3>Storage: 结构化数据</h3>
+				<h3>userData</h3>
+				<h3>作用域、有效时间、API</h3>
 			</div>
-			<div class="step" data-x="1000" data-y="0" data-rotate-y="90">
-				<h1>正则表达式</h1>
-				<h3>exec,match,test,replace</h3>
-				<h3>工具:https://www.debuggex.com</h3>
+			<div class="step selector_bg" data-x="1000" data-y="0" data-rotate-y="90">
+				<h1>选择器</h1>
+				<h3>id, class, :pseudo, [attribute]</h3>
+				<h3>层叠关系计算</h3>
+				<h3>inline:1000 id:100 class,pseudo-class,attibute:10 elements:1 </h3>
 			</div>
 			<div class="step" data-x="0" data-y="0" data-z="-1000" data-rotate-y="180">
-				<h1>关于ajax</h1>
-				<h3>XMLHttpRequest</h3>
-				<h3>Content-Type</h3>
+				<h1>单位</h1>
+				<h3>px</h3>
+				<h3>em,rem</h3>
 			</div>
 			<div class="step" data-x="-1000" data-y="0" data-z="0" data-rotate-y="270">
-				<h3>RESETFUL(Representational State Transfer 表现层状态转化)</h3>
-				<h3>PUT、GET、POST、DELETE</h3>
-				<h3>接口设计:</h3>
-				<h3>http(s)://server.com/app-name/{version}/{domain}/{rest-convention}</h3>
-				<h3>参考网址: http://www.ruanyifeng.com/blog/2014/05/restful_api.html</h3>
-				<!-- <h1>跨域</h1>
-				<h3>CORS</h3>
-				<h3>jsonp</h3>
-				<h3>document.domain</h3> -->
+				<h1>字体</h1>
+				<h3>font-zise</h3>
+				<h3>font-weight</h3>
+				<h3>@font-face</h3>
+				<h3>font-strecth</h3>
 			</div>
 			<div class="step" data-x="0" data-y="0" data-z="" data-rotate-y="0" >
-				<h1>跨域</h1>
-				<h3>CORS(Access-Control-Allow-Origin)</h3>
-				<h3>jsonp</h3>
-				<h3>document.domain</h3>
+				<h1>关于切图</h1>
+				<h3>布局与盒模型</h3>
+				<h3>block, inline, inline-block</h3>
+				<h3>margin(auto),padding,border, content</h3>
+				<h3>box-sizing</h3>
+				<h3>缩进</h3>
+				<h3>text-align, line-height, word-spacing, letter-spaing</h3>
 			</div>
 		</div>
 		<script type="text/javascript" src="../lib/js/impress.js"></script>
